# ai-explainable-portfolio

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  TASKS.md  pyproject.toml
adapters/: __init__.py  alpaca_adapter.py  base.py  kis_adapter.py  paper_adapter.py
agents/: allocator.py  analyst_agent.py  fundamentals_fetcher.py  insider_ownership.py  monitor_agent.py  pipeline.py  risk_analyst.py  sector_researcher.py  ticker_screener.py  trade_planner.py  valuation_analyst.py
app/: cli.py  graph.py  settings.py
config/: __init__.py  app.yaml  litellm_config.yaml  risk_policy.yaml  secrets.py  settings.py  strategy.yaml
docs/: AGENTS.md  AI_멀티에이전트_주식자동매매_설계서_개인용.docx  TASKS.md
engine/: capability_token.py  circuit_breaker.py  data_hub.py  execution_oms.py  kill_switch.py  logger.py  market_calendar.py  portfolio.py  reconciliation.py  replay.py  risk_gate.py  strategy_hub.py
reports/: render.py
schemas/: __init__.py  events.py  models.py
tests/: conftest.py  test_allocator.py  test_analyst_agent.py  test_capability_token.py  test_circuit_breaker.py  test_config.py  test_firecrawl.py  test_fundamentals_fetcher.py  test_graph.py  test_insider_ownership.py  test_kill_switch.py  test_kis_adapter.py  test_logger.py  test_market_calendar.py  test_monitor_agent.py  test_oms.py  test_pipeline.py  test_portfolio.py  test_reconciliation.py  test_report_template.py  test_risk_analyst.py  test_risk_edge.py  test_risk_gate.py  test_schemas.py  test_secrets.py  test_sector_researcher.py  test_strategy_hub.py  test_ticker_screener.py  test_trade_planner.py  (+7 more)
(+9 files in other folders)
