[project]
name = "trader-desktop"
version = "0.1.0"
description = "AI 멀티에이전트 주식 자동매매 데스크톱 앱"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "yfinance>=0.2",
    "tenacity>=8.0",
    "exchange-calendars>=4.0",
    "litellm>=1.0",
    "python-dotenv>=1.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
]
ui = [
    "streamlit>=1.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemas", "engine", "adapters", "agents", "tools"]
